@@ -1,1 +1,2 @@
 DIST Cython-0.22.tar.gz 1584483 SHA256 14307e7a69af9a0d0e0024d446af7e51cc0e3e4d0dfb10d36ba837e5e5844015 SHA512 856220fa579e272ac38dcef091760f527431ff3b98df9af6e68416fcf77d9659ac5abe5c7dee41331f359614637a4ff452033085335ee499830ed126ab584267
+DIST Cython-0.23b2.tar.gz 1619221 SHA256 00554bccbadc9b80f45eb7eb06b1b78b26a769f9a1d7832701a22de5caf1f0e2 SHA512 d937e7fe3da9e9ac365348e7d22ef964a1823e0fd35fdca569c9113c8867caf2d7eb0a33da3d8d4a6f0405b8a596d53785c197fcdbf1d845bbe62d24ace462bb
