@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-python/cython/ChangeLog,v 1.93 2013/02/16 22:07:28 mgorny Exp $
 
+*cython-0.23_beta2 (31 Jul 2015)
+
+  31 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  +cython-0.23_beta2.ebuild:
+  Importing new cython beta to try to reduce the reliance on a patched cython
+
 *cython-0.22-r5 (13 Jul 2015)
 
   13 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
